style/critical.scss
/*--------------------------------------------------------------
# Functions and vars
--------------------------------------------------------------*/
@import "variables-site/variables-site";
@import "mixins/mixins-master";

/*--------------------------------------------------------------
# Normalize
--------------------------------------------------------------*/
@import "normalize";

/*--------------------------------------------------------------
# Typography
--------------------------------------------------------------*/
@import "typography/typography";

/*--------------------------------------------------------------
# Accessibility
--------------------------------------------------------------*/
@import "modules/accessibility";

#page {
	background: $color__background-page;
	overflow-x: hidden;
}

.site-content,
.wrap {
	padding-left: $padding__content-mobile;
	padding-right: $padding__content-mobile;
	max-width: $size__content-width;
	margin-left: auto;
	margin-right: auto;

	@media screen and (min-width: breakpoint('tablet-landscape')) {
		padding-left: $padding__content-tablet;
		padding-right: $padding__content-tablet;
	}

	@media screen and (min-width: $size__content-width + $padding__content-tablet * 2) {
		padding-left: 0;
		padding-right: 0;
	}
}

.site-content {
	clear: both;
}

.wp-block-svbk-warranty {
	margin-left: calc(50% - 50vw);
	margin-right: calc(50% - 50vw);
}

.wp-block-image {

	&.alignwide,
	&.alignfull {
		margin-left: calc(50% - 50vw);
		margin-right: calc(50% - 50vw);
		max-width: none;
		margin-top: 0;
		margin-bottom: 0;

		@media screen and (min-width: $size__page-max-width) {
			margin-top: 20px;
			margin-bottom: 20px;
		}
	}

	&.alignwide {

		@media screen and (min-width: $size__page-max-width) {
			margin-left: 0;
			margin-right: 0;
		}
	}

	&.alignfull {

		@media screen and (min-width: $size__page-max-width) {
			margin-left: -$padding__content-desktop;
			margin-right: -$padding__content-desktop;
		}
	}
}

.wp-block-media-text {

	&.alignwide,
	&.alignfull {
		max-width: none;
		margin-left: calc(50% - 50vw);
		margin-right: calc(50% - 50vw);
		padding-left: calc(50vw - 50%);
		padding-right: calc(50vw - 50%);
	}
}

.wp-block-svbk-hero {
	margin-left: calc(50% - 50vw);
	margin-right: calc(50% - 50vw);

	@media screen and (min-width: $size__page-max-width) {
		max-width: $size__content-width + $padding__content-desktop * 2;
		margin: 20px auto;
	}
}

.wp-block-group {

	.wp-block-group__inner-container {
		max-width: $size__content-width;
		margin-left: auto;
		margin-right: auto;
	}

	&.alignwide,
	&.alignfull {
		margin-left: calc(50% - 50vw);
		margin-right: calc(50% - 50vw);
		padding-left: $padding__content-mobile;
		padding-right: $padding__content-mobile;

		@media screen and (min-width: breakpoint('tablet-landscape')) {
			padding-left: $padding__content-tablet;
			padding-right: $padding__content-tablet;
		}
	}

	&.alignwide {
		
		@media screen and (min-width: $size__page-max-width) {
			margin-left: -$padding__content-desktop;
			margin-right: -$padding__content-desktop;
		}
	}
}

.entry-content >,
.entry-content > .wp-block-group {

	p, ul, ol,
	h1, h2, h3, h4, h5, h6,
	.wp-block-pullquote.alignleft,
	.wp-block-pullquote.alignright,
	.wp-block-svbk-icon-paragraph,
	.wp-block-button {
		margin-left: auto;
		margin-right: auto;
	}
}

.entry-content >,
.entry-content > .wp-block-group {

	p, ul, ol,
	.wp-block-svbk-icon-paragraph,
	.wp-block-button {
		max-width: $size__text-width;
	}
}

.entry-content >,
.entry-content > .wp-block-group {

	h1, h2, h3, h4, h5, h6,
	.is-style-subtitle {
		max-width: $size__large-text-width;
	}
}

.wp-block-pullquote {

	&.alignleft,
	&.alignright,
	&.aligncenter {
		max-width: $size__large-text-width;
	}
}

img {
	max-width: 100%;
	height: auto;
}

.domloading .site-content,
.domready--show {
	display: none;
}

.domready {

	.domready--show {
		display: block;
	}

	.domready--hide {
		display: none;
	}
}

.site-header {

	.search-toggle,
	.search-form,
	.sub-menu {
		display: none;
	}

	#main-navigation {
		position: fixed;
		right: -100%;

		ul {
			list-style: none;
			padding: 0;
			margin: 0;

			li a {
				color: $color__text-main;
				text-decoration: none;
				text-transform: uppercase;
			}
		}

		@media screen and (min-width: breakpoint('tablet-landscape')) {
			position: static;
		}
	}
}

.wp-block-svbk-testimonials,
.wp-block-svbk-grid {

	@media screen and (min-width: $size__page-width + $padding__content-desktop * 2) {
		max-width: $size__page-width;
		margin-left: auto;
		margin-right: auto;
	}
}

.wp-block-gallery {
	position: relative;

	&.is-style-flickity,
	&.is-style-flickity-slider {
		margin: 0;
		padding: 0;
		list-style: none;
		display: block;
		margin-left: -#{$padding__content-mobile};
		margin-right: -#{$padding__content-mobile};

		.flickity-page-dots {
			display: none;
		}

		.flickity-button {
			position: absolute;
			top: 0;
			bottom: 40px;

			&.next {
				right: 0;
			}

			&.previous {
				left: 0;
			}

			svg {
				width: 30px;
			}
		}

		.blocks-gallery-item,
		figure,
		img {
			display: block;
		}

		.blocks-gallery-item {
			margin: 0;

			img {
				width: 100%;
				object-fit: cover;
			}
		}

		@media screen and (min-width: breakpoint('tablet-landscape')) {
			margin-right: -#{$padding__content-desktop};
			margin-left: -#{$padding__content-desktop};
		}
	}

	&.is-style-flickity-slider {

		.blocks-gallery-item {
			width: 100%;

			img {
				max-height: 200px;

				@media screen and (min-width: breakpoint('phone')) {
					max-height: 300px;
				}
	
				@media screen and (min-width: breakpoint('tablet-portrait')) {
					max-height: 430px;

					.wp-block-column & {
						max-height: 185px;
					}
				}
	
				@media screen and (min-width: breakpoint('tablet-landscape')) {
					max-height: 530px;

					.wp-block-column & {
						max-height: 279px;
					}
				}
	
				@media screen and (min-width: breakpoint('desktop')) {
					max-height: 630px;

					.wp-block-column & {
						max-height: 362px;
					}
				}
			}
		}
	}
}

/*--------------------------------------------------------------
# Common layout elements
--------------------------------------------------------------*/
@import "header/header";
@import "footer/footer";

/*--------------------------------------------------------------
# Layout
--------------------------------------------------------------*/
//@import "layout/in-grid";

